Updated Calendar overlapping issue

--- a/assets/sass/_extra.scss
+++ b/assets/sass/_extra.scss
@@ -3997,4 +3997,21 @@ body.single-dining #hero--single figure img.desktop {
   }
 }
 
+/* Tribe Calendar */
+.tribe-events-view--shortcode {
+  .tribe-events-calendar-month__events:has(.tribe-events-calendar-month__multiday-event-wrapper) {
+    article.hentry {
+      margin-top: 25px!important;
+      position: relative;
+      z-index: 50;
+    }
+    .tribe-events-calendar-month__multiday-event-wrapper {
+      article.hentry {
+        margin-top: 0!important;
+        z-index: 2;
+      }
+    }
+  }
+}
+
 
